--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,11 @@ apply plugin : 'eclipse'
 apply plugin : 'org.springframework.boot'
 apply plugin : 'io.spring.dependency-management' //스프링 부트의 의존성들을 관리해 주는 플러그인이라 필수 추가
 
-group 'org.jojoldu.book'
+//group 'org.jojoldu.book'
+group 'com.example'
 version '1.0-SNAPSHOT'
+
+sourceCompatibility = 1.8
 
 
 //repositories는 각종 의존성(라이브러리)들을 어떤 원격 저장소에서 받을지 정함
@@ -35,7 +38,11 @@ repositories {
 //특정버전을 명시하지 않아야 맨 위에 작성한 "org.springframework.boot:spring-boot:${springBootBVersion}"버전을 따라간다.
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    implementation('org.springframework.boot:spring-boot-starter-test')
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+    implementation('org.projectlombok:lombok')
+    implementation('com.h2database:h2')
+    
 }
 /* Default build.gradle
 
