--- a/build.gradle
+++ b/build.gradle
@@ -37,11 +37,16 @@ repositories {
 //프로젝트 개발에 필요한 의존성들을 선언하는 곳이다.
 //특정버전을 명시하지 않아야 맨 위에 작성한 "org.springframework.boot:spring-boot:${springBootBVersion}"버전을 따라간다.
 dependencies {
+    //@Builder 관련하여 인텔리제이에서'cannot find symbol method builder()' 에러나서 추가
+    annotationProcessor('org.projectlombok:lombok')
+
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-test')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.projectlombok:lombok')
     implementation('com.h2database:h2')
+
+    implementation('org.springframework.boot:spring-boot-starter-mustache')
     
 }
 /* Default build.gradle
