--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.jpa.show_sql=true
+#logging.level.root=debug
+spring.jpa.show-sql=true
 
-# h2 ? ?? ??? (http://localhost:8080/h2-console)
+# h2 console 접속 (http://localhost:8080/h2-console)
 spring.h2.console.enabled=true
